# TerreateLogger

./: CMakeLists.txt  README.md
impls/: CMakeLists.txt  defines.cpp  logger.cpp  loggers.cpp  manager.cpp
includes/: ILogger.hpp  TerreateLogger.hpp  defines.hpp  logger.hpp  loggerBase.hpp  manager.hpp
scripts/: run.sh
tests/: CMakeLists.txt  TLTest  TLTest.cpp
tests/impls/: CMakeLists.txt  TLTest.cpp
